# dj_engine

./: .gitignore  minimal_test.py  pyproject.toml
.cursor/rules/: access-static-data-via-loader.mdc  add-informative-logging.mdc  prefer-immutable-states-updates.mdc  standard-action-function-signature.mdc  strict-type-hinting.mdc  use-custom-exceptions-for-invalid-actions.mdc  use-project-dataclasses.mdc
data/: academy_scrolls.json  beagles_goals.json  campsites.json  correspondances_tiles.json  correspondence_tiles.json  crew_cards.json  island_A_tracks.json  island_B_tracks.json  island_C_tracks.json  main_board_actions.json  objective_display_area.json  objective_tiles.json  ocean_tracks.json  personal_board.json  special_action_tiles.json  species.json  starting_objectives_tiles.json  theory_of_evolution_track.json
src/dj_engine/: constants.py  data_loader.py  engine_utils.py  exceptions.py  game_setup.py  game_state.py  player.py
src/dj_engine/actions/: academy.py  reserve_turn_order.py
tests/: dictionary.txt  test_data_loader.py
tests/actions/: test_academy.py
